cropper chrome issue solved

--- a/content/bnw/styles/imgareaselect-animated.css
+++ b/content/bnw/styles/imgareaselect-animated.css
@@ -1,17 +1,17 @@
 .imgareaselect-border1 {
-	background: url(border-anim-v.gif) repeat-y left top;
+	//background: url(border-anim-v.gif) repeat-y left top;
 }
 
 .imgareaselect-border2 {
-    background: url(border-anim-h.gif) repeat-x left top;
+    //background: url(border-anim-h.gif) repeat-x left top;
 }
 
 .imgareaselect-border3 {
-    background: url(border-anim-v.gif) repeat-y right top;
+    //background: url(border-anim-v.gif) repeat-y right top;
 }
 
 .imgareaselect-border4 {
-    background: url(border-anim-h.gif) repeat-x left bottom;
+    //background: url(border-anim-h.gif) repeat-x left bottom;
 }
 
 .imgareaselect-border1, .imgareaselect-border2,
@@ -31,6 +31,7 @@
 	background-color: #000;
     filter: alpha(opacity=50);
 	opacity: 0.5;
+        display:none;
 }
 
 .imgareaselect-selection {
